<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Familiar</string>

    <!--Actions-->
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_create">Create</string>
    <string name="action_edit">Edit</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_reset">Reset</string>
    <string name="action_view">View</string>
    <string name="action_add">Add</string>

    <!--Activity titles-->
    <string name="title_activity_habit_show">HabitShowActivity</string>
    <string name="title_activity_habit_create">Add Habit</string>
    <string name="title_activity_habit_new">HabitNewActivity</string>
    <string name="title_activity_habit_edit">HabitEditActivity</string>
    <string name="title_activity_habit_timer">HabitTimerActivity</string>

    <!--Field names-->
    <string name="habit_field_name">Name</string>
    <string name="habit_field_name_placeholder">e.g. Exercise</string>
    <string name="habit_field_duration">Duration</string>
    <string name="habit_field_duration_placeholder">How many minutes?</string>
    <string name="habit_field_timers_per_duration_placeholder">How many days per week?</string>

    <!--Empty state screens-->
    <string name="empty_state_title">No Habits</string>
    <string name="empty_state_subtext">Tap the button at the bottom of the screen to get started.</string>

    <!--Button text-->
    <string name="button_done">Done</string>

    <!--Alerts-->
    <string name="alert_message_reset_progress">Reset progress for all habits? \n\nYou typically only want to do this at the beginning of the week.</string>
    <string name="alert_message_reset_progress_title">Reset progress for this habit?</string>

    <!--Other-->
    <string name="placeholder">!!!PLACEHOLDER!!!</string>

    <string name="times_per_duration_validation_message">Please enter times per week</string>
    <string name="body_font">fonts/MuseoSansRounded-700.otf</string>
    <string name="current_progress_divider">/</string>
    <string name="mark_task_done">I just did this!</string>


    <string name="minutes">minutes</string>
    <string name="times_per_week">times a week</string>
    <string name="start_timer">Start timer</string>
    <string name="progress_reset_confirm">Progress reset for all habits.</string>
    <string name="start_new_week">Start New Week</string>
    <string name="start_fresh">Start Fresh</string>
</resources>
