<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"

            android:background="@color/white">

    <LinearLayout
        style="@style/base_activity_layout_style"
        tools:context="com.javonharper.familiar.activities.HabitNewActivity"
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/name_label"
                android:layout_marginBottom="@dimen/spacing_normal"
                android:text="@string/habit_field_name"
                style="@style/field_label"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/name_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_large"
                android:hint="@string/habit_field_name_placeholder"
                android:inputType="textCapSentences"
                android:textColor="@color/black"
                android:textSize="@dimen/font_normal"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/duration_label"
                android:layout_marginBottom="@dimen/spacing_normal"
                android:text="@string/habit_field_duration"
                style="@style/field_label"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/duration_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_large"
                android:layout_weight="1"
                android:hint="@string/habit_field_duration_placeholder"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="@dimen/font_normal"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/times_per_duration_label"
                android:layout_marginBottom="@dimen/spacing_normal"
                android:text="Frequency"
                style="@style/field_label"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/times_per_duration_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_large"
                android:hint="@string/habit_field_timers_per_duration_placeholder"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="@dimen/font_normal"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
