<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_color"
    android:orientation="vertical"
    tools:context="com.javonharper.familiar.HabitShowActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/app_spacing">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/fieldset_spacing"
            android:gravity="center"
            android:text="@string/placeholder"
            android:textColor="@color/app_text_color"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/app_spacing">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="@dimen/app_spacing">

            <!--<TextView-->
                <!--android:id="@+id/habit_duration"-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="fill_parent"-->
                <!--android:layout_marginBottom="@dimen/fieldset_spacing"-->
                <!--android:gravity="center"-->
                <!--android:text="@string/placeholder"-->
                <!--android:textColor="@color/app_text_color"-->
                <!--android:textSize="@dimen/body_text_size" />-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                >
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_action_timer"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
>
                <TextView
                    android:id="@+id/duration_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="XX"
                    android:textStyle="bold"
                    android:textColor="@color/app_text_color"
                    android:textSize="@dimen/title_text_size"/>
                </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                >
                <TextView
                    android:id="@+id/duration_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minutes"
                    android:textColor="@color/app_text_color"
                    android:textSize="@dimen/body_text_size"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="@dimen/app_spacing">

            <!--<TextView-->
            <!--android:id="@+id/habit_duration"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="fill_parent"-->
            <!--android:layout_marginBottom="@dimen/fieldset_spacing"-->
            <!--android:gravity="center"-->
            <!--android:text="@string/placeholder"-->
            <!--android:textColor="@color/app_text_color"-->
            <!--android:textSize="@dimen/body_text_size" />-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_action_repeat"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/frequency_value"
                    android:text="X"
                    android:textStyle="bold"
                    android:textColor="@color/app_text_color"
                    android:textSize="@dimen/title_text_size"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/frequency_label"
                    android:text="@string/times_per_week"
                    android:textColor="@color/app_text_color"
                    android:textSize="@dimen/body_text_size"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/app_spacing">

        <TextView
            android:id="@+id/habit_current_progress_label"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/app_spacing"
            android:layout_marginBottom="@dimen/app_spacing"
            android:gravity="center"
            android:text="Current Progress"
            android:textColor="@color/app_text_color"
            android:textSize="@dimen/subhead_text_size"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/habit_current_progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/fieldset_spacing"

            android:gravity="center"
            android:text="@string/placeholder"
            android:textColor="@color/app_text_color"
            android:textSize="@dimen/subhead_text_size" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/app_spacing">

        <Button
            android:id="@+id/increment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/button_background_color"
            android:text="@string/mark_task_done"
            android:textColor="@color/button_text_color"
            android:textSize="@dimen/body_text_size"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
</LinearLayout>
